# Soloist

./: .gitignore  README.md
Improved Radar 2/: .env.example  Dockerfile  agent.md  docker-compose.yml  pyproject.toml
Improved Radar 2/app/: __init__.py  config.py  main.py
Improved Radar 2/app/agents/: nodes.py  prompts.py  workflow.py
Improved Radar 2/app/api/: routes.py
Improved Radar 2/app/core/: database.py  llm.py  pdf_generator.py  state.py
Improved Radar 2/app/rag/: document_parser.py  ingest.py  vector_store.py
Improved Radar 2/app/scrapers/: browser.py  source_ddg.py  source_fiverr.py  source_linkedin.py  source_reddit.py  source_upwork.py
Improved Radar 2/chroma_db/: chroma.sqlite3
Improved Radar 2/data/generated_pdfs/: job_1_reddit.html  job_1_upwork.html  job_2_reddit.html  job_2_upwork.html  job_3_reddit.html  job_4_reddit.html
Improved Radar 2/data/uploads/: Daksh Shrivastav.docx  Danish Resume.docx
Improved Radar 2/sqlite_db/: soloist.db
Improved Radar 2/static/: app.js  index.html  style.css
Sololist Backend/: .env.example  README.md  __init__.py  requirements.txt
Sololist Backend/app/: config.py  database.py  main.py  seed.py
Sololist Backend/app/integrations/: calendar.py  email.py  jira.py  notion.py
Sololist Backend/app/models/: __init__.py  automation.py  capacity.py  client.py  invoice.py  message.py  opportunity.py  profile.py
Sololist Backend/app/routers/: ai.py  automations.py  clients.py  dashboard.py  invoices.py  messages.py  opportunities.py  (+2 more)
Sololist Frontend/: Readit.txt  package-lock.json  package.json
(+56 files in other folders)
